--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
   },
   "homepage": "https://github.com/atomicjolt/atomic-fuel",
   "dependencies": {
-    "superagent": "^3.5.0"
-  },
-  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -63,6 +60,7 @@
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
-    "rimraf": "^2.3.4"
+    "rimraf": "^2.3.4",
+    "superagent": "^3.5.0"
   }
 }
