code that gets specs up and running

--- a/config/jest_config.json
+++ b/config/jest_config.json
@@ -7,7 +7,7 @@
     "<rootDir>/node_modules",
     "<rootDir>/../node_modules"
   ],
-  "moduleFileExtensions": ["js", "jsx"],
+  "moduleFileExtensions": ["js", "jsx", "json"],
   "moduleDirectories": ["node_modules"],
   "testPathIgnorePatterns": ["/node_modules/", "/libs/"],
   "moduleNameMapper": {
