--- a/.babelrc
+++ b/.babelrc
@@ -9,8 +9,7 @@
         ["babel-plugin-rewire"],
       ],
       "ignore": [
-        "node_modules",
-        "**/*.spec.js"
+        "node_modules"
       ]
     },
     "development": {
@@ -20,8 +19,7 @@
         ["transform-class-properties"],
       ],
       "ignore": [
-        "node_modules",
-        "**/*.spec.js"
+        "node_modules"
       ]
     },
     "hot": {
@@ -32,8 +30,7 @@
         ["react-hot-loader/babel"],
       ],
       "ignore": [
-        "node_modules",
-        "**/*.spec.js"
+        "node_modules"
       ]
     },
     "production": {
@@ -45,8 +42,7 @@
         ["transform-react-remove-prop-types"],
       ],
       "ignore": [
-        "node_modules",
-        "**/*.spec.js"
+        "node_modules"
       ]
     }
   }
