--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/atomicjolt/atomic-fuel",
   "dependencies": {
+    "atomic-reactor": "^1.0.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -52,6 +53,7 @@
     "jasmine-core": "^2.6.2",
     "jest": "^21.2.1",
     "lodash": "^4.17.4",
+    "mime": "^2.0.3",
     "nock": "^9.0.14",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
