Remove generated specs

--- a/.babelrc
+++ b/.babelrc
@@ -42,7 +42,8 @@
         ["transform-react-remove-prop-types"],
       ],
       "ignore": [
-        "node_modules"
+        "node_modules",
+        "*.spec.*"
       ]
     }
   }
