--- a/package.json
+++ b/package.json
@@ -43,22 +43,22 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.1.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-babel": "^4.1.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.8.0",
     "jasmine": "^2.6.0",
     "jasmine-core": "^2.6.2",
     "jest": "^21.2.1",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.10",
     "mime": "^1.4.1",
     "nock": "^9.1.4",
     "prop-types": "^15.6.1",
-    "react": "^16.3.1",
-    "react-hot-loader": "next",
-    "react-redux": "^5.0.5",
+    "react": "^16.3.2",
+    "react-hot-loader": "^4.1.3",
+    "react-redux": "^5.0.7",
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.1",
     "redux-devtools-dock-monitor": "^1.1.2",
