--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "2.5.0",
   "description": "Atomic Jolt's front-end library code",
   "scripts": {
-    "test": "jest --config=config/jest_config.json",
+    "test": "jest --no-cache --config=config/jest_config.json",
     "watch": "jest --config=config/jest_config.json --watch",
+    "jest_version": "which jest && jest --version",
     "build": "cross-env BABEL_ENV=production babel src --out-dir libs",
     "clean": "rimraf libs",
     "lint": "eslint src test",
@@ -26,12 +27,12 @@
   },
   "homepage": "https://github.com/atomicjolt/atomic-fuel",
   "dependencies": {
-    "atomic-reactor": "^1.1.9",
+    "atomic-reactor": "^3.1.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.5",
     "babel-plugin-rewire": "^1.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -52,12 +53,12 @@
     "jasmine": "^2.6.0",
     "jasmine-core": "^2.6.2",
     "jest": "^21.2.1",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "mime": "^1.4.1",
     "nock": "^9.3.0",
-    "prop-types": "^15.6.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.0",
-    "react-hot-loader": "^4.3.0",
+    "react-hot-loader": "^4.3.8",
     "react-redux": "^5.0.7",
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.1",
