Updated to use babel 7

--- a/.babelrc
+++ b/.babelrc
@@ -1,52 +1,4 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "env": {
-    "test": {
-      "plugins": [
-        ["transform-runtime"],
-        ["transform-decorators-legacy"],
-        ["transform-class-properties"],
-        ["transform-react-jsx-source"],
-      ],
-      "ignore": [
-        "node_modules"
-      ]
-    },
-    "development": {
-      "plugins": [
-        ["transform-runtime"],
-        ["transform-decorators-legacy"],
-        ["transform-class-properties"],
-        ["transform-react-jsx-source"],
-      ],
-      "ignore": [
-        "node_modules"
-      ]
-    },
-    "hot": {
-      "plugins": [
-        ["transform-runtime"],
-        ["transform-decorators-legacy"],
-        ["transform-class-properties"],
-        ["react-hot-loader/babel"],
-        ["transform-react-jsx-source"],
-      ],
-      "ignore": [
-        "node_modules"
-      ]
-    },
-    "production": {
-      "plugins": [
-        ["transform-runtime"],
-        ["transform-decorators-legacy"],
-        ["transform-class-properties"],
-        ["transform-react-constant-elements"],
-        ["transform-react-remove-prop-types"],
-      ],
-      "ignore": [
-        "node_modules",
-        "*.spec.*"
-      ]
-    }
-  }
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
