--- a/package.json
+++ b/package.json
@@ -74,5 +74,7 @@
     "rimraf": "^3.0.2",
     "superagent": "^5.2.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "sass": "^1.35.1"
+  }
 }
