--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,8 @@
     "./src/**/*.stories.ts"
   ],
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    "babel-plugin-transform-scss"
+  ]
 }
