Configured babel testing environment

--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,28 @@
 {
-  "ignore": [
-    "./src/**/*.spec.jsx",
-    "./src/**/*.spec.tsx",
-    "./src/**/*.spec.js",
-    "./src/**/*.spec.ts",
-    "./src/**/*.stories.jsx",
-    "./src/**/*.stories.tsx",
-    "./src/**/*.stories.js",
-    "./src/**/*.stories.ts"
-  ],
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "babel-plugin-transform-scss"
-  ]
+  "env": {
+    "production": {
+      "ignore": [
+        "./src/**/*.spec.jsx",
+        "./src/**/*.spec.tsx",
+        "./src/**/*.spec.js",
+        "./src/**/*.spec.ts",
+        "./src/**/*.stories.jsx",
+        "./src/**/*.stories.tsx",
+        "./src/**/*.stories.js",
+        "./src/**/*.stories.ts"
+      ],
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "babel-plugin-transform-scss"
+      ]
+    },
+    "test": {
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
+      "plugins": [
+        "@babel/plugin-proposal-class-properties",
+        "babel-plugin-transform-scss"
+      ]
+    }
+  }
 }
