--- a/package.json
+++ b/package.json
@@ -53,9 +53,11 @@
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
     "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.23",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-scss": "^1.0.11",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -74,9 +76,9 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "rimraf": "^3.0.2",
+    "sass": "^1.35.1",
     "superagent": "^5.2.2",
-    "babel-plugin-transform-scss": "^1.0.11",
-    "sass": "^1.35.1"
+    "tslint": "^6.1.3"
   },
   "dependencies": {
     "add": "^2.0.6",
