Storybook configured with TypeScript

--- a/.babelrc
+++ b/.babelrc
@@ -11,17 +11,23 @@
         "./src/**/*.stories.js",
         "./src/**/*.stories.ts"
       ],
-      "presets": ["@babel/preset-env", "@babel/preset-react"],
+      "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react",
+        "@babel/preset-typescript"
+      ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "babel-plugin-transform-scss"
+        "@babel/plugin-proposal-class-properties"
       ]
     },
     "test": {
-      "presets": ["@babel/preset-env", "@babel/preset-react"],
+      "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react",
+        "@babel/preset-typescript"
+      ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        "babel-plugin-transform-scss"
+        "@babel/plugin-proposal-class-properties"
       ]
     }
   }
