--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -1,7 +1,10 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react",
+    "@babel/preset-typescript"
+  ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "babel-plugin-transform-scss"
+    "@babel/plugin-proposal-class-properties"
   ]
 }
