--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-react-css-modules": "^5.2.6",
     "babel-plugin-transform-scss": "^1.0.11",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.2",
