Added material outline link to StoryWrapper

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "cross-env BABEL_ENV=test jest --no-cache --config package.json",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand --watch --config package.json",
     "jest_version": "which jest && jest --version",
-    "prebuild": "yarn build:css",
+    "prebuild": "node-sass src/components/ -o libs/components/",
     "build": "cross-env BABEL_ENV=production babel src --out-dir libs",
     "nuke": "rm -rf node_modules",
     "clean": "rimraf libs",
@@ -65,7 +65,6 @@
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-react-css-modules": "^5.2.6",
-    "babel-plugin-transform-scss": "^1.0.11",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
