--- a/.storybook/.babelrc
+++ b/.storybook/.babelrc
@@ -5,6 +5,9 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    ["babel-plugin-react-css-modules", {
+      "generateScopedName": "[name]-[local]-[hash:base64:4]"
+    }]
   ]
 }
