--- a/.babelrc
+++ b/.babelrc
@@ -14,7 +14,13 @@
       "presets": [
         "@babel/preset-env",
         "@babel/preset-react",
-        "@babel/preset-typescript"
+        [
+          "@babel/preset-typescript",
+          {
+            "isTSX": true,
+            "allExtensions": true
+          }
+        ]
       ],
       "plugins": [
         "@babel/plugin-proposal-class-properties",
@@ -27,7 +33,13 @@
       "presets": [
         "@babel/preset-env",
         "@babel/preset-react",
-        "@babel/preset-typescript"
+        [
+          "@babel/preset-typescript",
+          {
+            "isTSX": true,
+            "allExtensions": true
+          }
+        ]
       ],
       "plugins": [
         "@babel/plugin-proposal-class-properties",
