--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "test": "cross-env BABEL_ENV=test jest --no-cache --config package.json",
     "test:debug": "node --inspect node_modules/.bin/jest --runInBand --watch --config package.json",
     "jest_version": "which jest && jest --version",
-    "prebuild": "node-sass src/components/ -o libs/components/",
-    "build": "cross-env BABEL_ENV=production babel src --out-dir libs",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "yarn type-check -- --watch",
+    "build:types": "tsc --emitDeclarationOnly",
+    "prebuild:js": "rm -rf libs/*; node-sass src/components/ -o libs/components/",
+    "build:js": "cross-env BABEL_ENV=production babel src --out-dir libs --extensions \".js,.jsx,.ts,.tsx\" --source-maps inline",
+    "build": "yarn build:types && yarn build:js",
     "nuke": "rm -rf node_modules",
     "clean": "rimraf libs",
     "lint": "eslint src",
     "lint_fix": "eslint src --fix",
-    "prepare": "yarn clean && yarn build",
+    "prepare": "yarn clean",
     "prestorybook": "yarn build:css",
     "storybook": "npm-run-all -p watch:css dev-storybook",
     "dev-storybook": "start-storybook -p 6006",
@@ -88,7 +92,8 @@
     "rimraf": "^3.0.2",
     "sass": "^1.35.1",
     "superagent": "^5.2.2",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.14.5",
