Tests are passing

--- a/.babelrc
+++ b/.babelrc
@@ -14,13 +14,7 @@
       "presets": [
         "@babel/preset-env",
         "@babel/preset-react",
-        [
-          "@babel/preset-typescript",
-          {
-            "isTSX": true,
-            "allExtensions": true
-          }
-        ]
+        "@babel/preset-typescript"
       ],
       "plugins": [
         "@babel/plugin-proposal-class-properties",
@@ -33,13 +27,7 @@
       "presets": [
         "@babel/preset-env",
         "@babel/preset-react",
-        [
-          "@babel/preset-typescript",
-          {
-            "isTSX": true,
-            "allExtensions": true
-          }
-        ]
+        "@babel/preset-typescript"
       ],
       "plugins": [
         "@babel/plugin-proposal-class-properties",
