--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,35 @@
 {
 	"include": [
-			"src/*"
+		"src/**/*",
 	],
-	"compilerOptions": {
-			"allowSyntheticDefaultImports": true,
-			"esModuleInterop": true,
-			"strict": true,
-			"outDir": "libs",
-			"module": "commonjs",
-			"target": "es5",
-			"declaration": true,
-			"lib": ["es6", "dom"],
-			"sourceMap": true,
-			"allowJs": true,
-			"jsx": "react",
-			"moduleResolution": "node",
-			"rootDir": "src",
-			"noImplicitReturns": true,
-			"noImplicitThis": true,
-			"noImplicitAny": true,
-			"strictNullChecks": true
-	},
 	"exclude": [
-    "node_modules",
-    "libs"
-  ]
+		"src/**/*.stories.ts",
+		"src/**/*.stories.tsx",
+		"src/**/*.spec.ts",
+		"src/**/*.spec.tsx",
+		"src/**/*.stories.js",
+		"src/**/*.stories.jsx",
+		"src/**/*.spec.js",
+		"src/**/*.spec.jsx",
+  ],
+	"compilerOptions": {
+		"allowSyntheticDefaultImports": true,
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
+		"strict": true,
+		"outDir": "libs",
+		"module": "commonjs",
+		"target": "es5",
+		"declaration": true,
+		"lib": ["es6", "dom"],
+		"sourceMap": true,
+		"allowJs": true,
+		"jsx": "react",
+		"moduleResolution": "node",
+		"noImplicitReturns": true,
+		"noImplicitThis": true,
+		"noImplicitAny": true,
+		"strictNullChecks": true,
+		"isolatedModules": true
+	},
 }
