--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "type-check": "tsc --noEmit",
     "type-check:watch": "yarn type-check -- --watch",
     "build:types": "tsc --emitDeclarationOnly",
-    "prebuild:js": "rm -rf libs/*; node-sass src/components/ -o libs/components/",
-    "build:js": "cross-env BABEL_ENV=production babel src --out-dir libs --extensions \".js,.jsx,.ts,.tsx\" --source-maps inline",
+    "prebuild:js": "node-sass src/components/ -o libs/components/",
+    "build:js": "cross-env BABEL_ENV=production babel src --out-dir libs --extensions \".js,.jsx,.ts,.tsx\"",
+    "prebuild": "rm -rf libs/*",
     "build": "yarn build:types && yarn build:js",
     "nuke": "rm -rf node_modules",
     "clean": "rimraf libs",
@@ -33,6 +34,11 @@
     "reactjs",
     "redux"
   ],
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.(css|less)$": "<rootDir>/src/css-stub.js"
+    }
+  },
   "author": "atomicjolt (http://github.com/atomicjolt)",
   "license": "MIT",
   "bugs": {
@@ -57,6 +63,7 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.14.5",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
@@ -65,6 +72,7 @@
     "@types/jest": "^26.0.23",
     "@types/node-sass": "^4.11.1",
     "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.3.0",
     "babel-loader": "^8.2.2",
@@ -96,7 +104,6 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "@babel/preset-typescript": "^7.14.5",
     "add": "^2.0.6",
     "node-sass": "^6.0.0",
     "yarn": "^1.22.10"
