removed unnecessary css-modules plugin

--- a/.babelrc
+++ b/.babelrc
@@ -17,10 +17,7 @@
         "@babel/preset-typescript"
       ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        ["babel-plugin-react-css-modules", {
-          "generateScopedName": "[name]-[local]-[hash:base64:4]"
-        }]
+        "@babel/plugin-proposal-class-properties"
       ]
     },
     "test": {
@@ -30,10 +27,7 @@
         "@babel/preset-typescript"
       ],
       "plugins": [
-        "@babel/plugin-proposal-class-properties",
-        ["babel-plugin-react-css-modules", {
-          "generateScopedName": "[name]-[local]-[hash:base64:4]"
-        }]
+        "@babel/plugin-proposal-class-properties"
       ]
     }
   }
